--- a/organs.html
+++ b/organs.html
@@ -18,7 +18,7 @@
   <link href="assets/css/style.css" rel="stylesheet" />
 </head>
 <body>
-  <div w3-include-html="http://www.dersche.id/includes/header.html"></div>
+  <div w3-include-html="/includes/header.html"></div>
   <script>
   w3IncludeHTML();
   </script>
@@ -40,7 +40,7 @@
       </div>
     </div>
   </section>
-  <div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
+  <div w3-include-html="/includes/footer.html"></div>
   <script>
   w3IncludeHTML();
   </script>
