--- a/typewriterWishList.html
+++ b/typewriterWishList.html
@@ -129,7 +129,7 @@ function w3IncludeHTML() {
       </div>
     </div>
   </section>
-  <div w3-include-html="/footer.html"></div>
+  <div w3-include-html="/includes/footer.html"></div>
   <script>
   w3IncludeHTML();
   </script>
