--- a/TypewriterLanding.html
+++ b/TypewriterLanding.html
@@ -1,6 +1,34 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-<script src="http://www.w3schools.com/lib/w3data.js"></script>
+<script>
+function w3IncludeHTML() {
+  var z, i, elmnt, file, xhttp;
+  /*loop through a collection of all HTML elements:*/
+  z = document.getElementsByTagName("*");
+  for (i = 0; i < z.length; i++) {
+    elmnt = z[i];
+    /*search for elements with a certain atrribute:*/
+    file = elmnt.getAttribute("w3-include-html");
+    if (file) {
+      /*make an HTTP request using the attribute value as the file name:*/
+      xhttp = new XMLHttpRequest();
+      xhttp.onreadystatechange = function() {
+        if (this.readyState == 4) {
+          if (this.status == 200) {elmnt.innerHTML = this.responseText;}
+          if (this.status == 404) {elmnt.innerHTML = "Page not found.";}
+          /*remove the attribute, and call this function once more:*/
+          elmnt.removeAttribute("w3-include-html");
+          w3IncludeHTML();
+        }
+      }      
+      xhttp.open("GET", file, true);
+      xhttp.send();
+      /*exit the function:*/
+      return;
+    }
+  }
+};
+</script>
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -18,7 +46,7 @@
   <link href="assets/css/style.css" rel="stylesheet" />
 </head>
 <body>
-  <div w3-include-html="http://www.dersche.id/includes/typewriterHeader.html"></div>
+  <div w3-include-html="/includes/typewriterHeader.html"></div>
   <script>
   w3IncludeHTML();
   </script>
@@ -30,7 +58,7 @@
           <p>
             <center>
               <img style="width:500px; border:1px solid black;"
-              src="http://www.dersche.id/assets/img/typewriters/1918Corona3__Distressed.jpg"
+              src="/assets/img/typewriters/1918Corona3__Distressed.jpg"
               alt="1918 Corona 3, Distressed">
             </center>
           </p>
@@ -45,7 +73,7 @@
           <hr>
           <p>I have been collecting typewriters since June of 2012. Currently, my collection consists of about 60 machines.
             A list of my collection with pictures and descriptions can be found below,
-            as well as a more in depth list <a href="http://www.dersche.id/typewriterCollection.html">here</a>.
+            as well as a more in depth list <a href="/typewriterCollection.html">here</a>.
             I think it goes without saying that Corona is by far my favorite brand of typewriter. Each image at the
             top of these typewriter pages is one of my prized Corona machines, edited to have that old time feel.
           </p>
@@ -78,7 +106,7 @@
     </div>
   </div>
 </section>
-<div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
+<div w3-include-html="/includes/footer.html"></div>
 <script>
 w3IncludeHTML();
 </script>
