--- a/recordLanding.html
+++ b/recordLanding.html
@@ -1,6 +1,34 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-<script src="http://www.w3schools.com/lib/w3data.js"></script>
+<script>
+function w3IncludeHTML() {
+  var z, i, elmnt, file, xhttp;
+  /*loop through a collection of all HTML elements:*/
+  z = document.getElementsByTagName("*");
+  for (i = 0; i < z.length; i++) {
+    elmnt = z[i];
+    /*search for elements with a certain atrribute:*/
+    file = elmnt.getAttribute("w3-include-html");
+    if (file) {
+      /*make an HTTP request using the attribute value as the file name:*/
+      xhttp = new XMLHttpRequest();
+      xhttp.onreadystatechange = function() {
+        if (this.readyState == 4) {
+          if (this.status == 200) {elmnt.innerHTML = this.responseText;}
+          if (this.status == 404) {elmnt.innerHTML = "Page not found.";}
+          /*remove the attribute, and call this function once more:*/
+          elmnt.removeAttribute("w3-include-html");
+          w3IncludeHTML();
+        }
+      }      
+      xhttp.open("GET", file, true);
+      xhttp.send();
+      /*exit the function:*/
+      return;
+    }
+  }
+};
+</script>
 <head>
 	<link rel="shortcut icon" type="image/x-icon" href="http://dersche.id/favicon.ico">
 	<meta charset="utf-8" />
@@ -19,7 +47,7 @@
 	<link href="assets/css/style.css" rel="stylesheet" />
 </head>
 <body>
-	<div w3-include-html="http://www.dersche.id/includes/header.html"></div>
+	<div w3-include-html="/includes/header.html"></div>
 	<script>
 	w3IncludeHTML();
 	</script>
@@ -40,7 +68,7 @@
 			</div>
 		</div>
 	</section>
-	<div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
+	<div w3-include-html="/includes/footer.html"></div>
 	<script>
 	w3IncludeHTML();
 	</script>
