--- a/stanton.html
+++ b/stanton.html
@@ -1,6 +1,34 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-<script src="http://www.w3schools.com/lib/w3data.js"></script>
+<script>
+function w3IncludeHTML() {
+  var z, i, elmnt, file, xhttp;
+  /*loop through a collection of all HTML elements:*/
+  z = document.getElementsByTagName("*");
+  for (i = 0; i < z.length; i++) {
+    elmnt = z[i];
+    /*search for elements with a certain atrribute:*/
+    file = elmnt.getAttribute("w3-include-html");
+    if (file) {
+      /*make an HTTP request using the attribute value as the file name:*/
+      xhttp = new XMLHttpRequest();
+      xhttp.onreadystatechange = function() {
+        if (this.readyState == 4) {
+          if (this.status == 200) {elmnt.innerHTML = this.responseText;}
+          if (this.status == 404) {elmnt.innerHTML = "Page not found.";}
+          /*remove the attribute, and call this function once more:*/
+          elmnt.removeAttribute("w3-include-html");
+          w3IncludeHTML();
+        }
+      }      
+      xhttp.open("GET", file, true);
+      xhttp.send();
+      /*exit the function:*/
+      return;
+    }
+  }
+};
+</script>
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -18,7 +46,7 @@
   <link href="assets/css/style.css" rel="stylesheet" />
 </head>
 <body>
-  <div w3-include-html="http://www.dersche.id/includes/header.html"></div>
+  <div w3-include-html="/includes/header.html"></div>
   <script>
   w3IncludeHTML();
   </script>
@@ -366,19 +394,19 @@
           </div>
           <br>
           <br>
-          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/Page1_Stitched.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/Page1_Stitched.png" alt="01" style="width:500px;"></a></center></p>
-          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/Page2_Stitched.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/Page2_Stitched.png" alt="02" style="width:500px;"></a></center></p>
-          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/Page3_Stitched.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/Page3_Stitched.png" alt="03" style="width:500px;"></a></center></p>
-          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/Page4_Stitched.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/Page4_Stitched.png" alt="04" style="width:500px;"></a></center></p>
-          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/Page5_Stitched.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/Page5_Stitched.png" alt="05" style="width:500px;"></a></center></p>
-          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/Page6_Stitched.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/Page6_Stitched.png" alt="06" style="width:500px;"></a></center></p>
-          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/Page7_Stitched.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/Page7_Stitched.png" alt="07" style="width:500px;"></a></center></p>
-          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/Page8_Stitched.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/Page8_Stitched.png" alt="08" style="width:500px;"></a></center></p>
+          <p><center><a href="/assets/img/microfilm/1895/stantonAtRest/Page1_Stitched.png"><img src="/assets/img/microfilm/1895/stantonAtRest/preview/Page1_Stitched.png" alt="01" style="width:500px;"></a></center></p>
+          <p><center><a href="/assets/img/microfilm/1895/stantonAtRest/Page2_Stitched.png"><img src="/assets/img/microfilm/1895/stantonAtRest/preview/Page2_Stitched.png" alt="02" style="width:500px;"></a></center></p>
+          <p><center><a href="/assets/img/microfilm/1895/stantonAtRest/Page3_Stitched.png"><img src="/assets/img/microfilm/1895/stantonAtRest/preview/Page3_Stitched.png" alt="03" style="width:500px;"></a></center></p>
+          <p><center><a href="/assets/img/microfilm/1895/stantonAtRest/Page4_Stitched.png"><img src="/assets/img/microfilm/1895/stantonAtRest/preview/Page4_Stitched.png" alt="04" style="width:500px;"></a></center></p>
+          <p><center><a href="/assets/img/microfilm/1895/stantonAtRest/Page5_Stitched.png"><img src="/assets/img/microfilm/1895/stantonAtRest/preview/Page5_Stitched.png" alt="05" style="width:500px;"></a></center></p>
+          <p><center><a href="/assets/img/microfilm/1895/stantonAtRest/Page6_Stitched.png"><img src="/assets/img/microfilm/1895/stantonAtRest/preview/Page6_Stitched.png" alt="06" style="width:500px;"></a></center></p>
+          <p><center><a href="/assets/img/microfilm/1895/stantonAtRest/Page7_Stitched.png"><img src="/assets/img/microfilm/1895/stantonAtRest/preview/Page7_Stitched.png" alt="07" style="width:500px;"></a></center></p>
+          <p><center><a href="/assets/img/microfilm/1895/stantonAtRest/Page8_Stitched.png"><img src="/assets/img/microfilm/1895/stantonAtRest/preview/Page8_Stitched.png" alt="08" style="width:500px;"></a></center></p>
         </div>
       </div>
     </div>
   </section>
-  <div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
+  <div w3-include-html="/includes/footer.html"></div>
   <script>
   w3IncludeHTML();
   </script>
