--- a/baldwin635/baldwin635.html
+++ b/baldwin635/baldwin635.html
@@ -1,6 +1,34 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-<script src="http://www.w3schools.com/lib/w3data.js"></script>
+<script>
+function w3IncludeHTML() {
+  var z, i, elmnt, file, xhttp;
+  /*loop through a collection of all HTML elements:*/
+  z = document.getElementsByTagName("*");
+  for (i = 0; i < z.length; i++) {
+    elmnt = z[i];
+    /*search for elements with a certain atrribute:*/
+    file = elmnt.getAttribute("w3-include-html");
+    if (file) {
+      /*make an HTTP request using the attribute value as the file name:*/
+      xhttp = new XMLHttpRequest();
+      xhttp.onreadystatechange = function() {
+        if (this.readyState == 4) {
+          if (this.status == 200) {elmnt.innerHTML = this.responseText;}
+          if (this.status == 404) {elmnt.innerHTML = "Page not found.";}
+          /*remove the attribute, and call this function once more:*/
+          elmnt.removeAttribute("w3-include-html");
+          w3IncludeHTML();
+        }
+      }      
+      xhttp.open("GET", file, true);
+      xhttp.send();
+      /*exit the function:*/
+      return;
+    }
+  }
+};
+</script>
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -11,14 +39,14 @@
   <![endif]-->
   <title>Baldwin 635 - DERSCHE.id</title>
   <!-- BOOTSTRAP CORE STYLE CSS -->
-  <link href="http://www.dersche.id/assets/css/bootstrap.css" rel="stylesheet" />
+  <link href="/assets/css/bootstrap.css" rel="stylesheet" />
   <!-- FONTAWESOME STYLE CSS -->
-  <link href="http://www.dersche.id/assets/css/font-awesome.css" rel="stylesheet" />
+  <link href="/assets/css/font-awesome.css" rel="stylesheet" />
   <!-- CUSTOM STYLE CSS -->
-  <link href="http://www.dersche.id/assets/css/style.css" rel="stylesheet" />
+  <link href="/assets/css/style.css" rel="stylesheet" />
 </head>
 <body>
-  <div w3-include-html="http://www.dersche.id/includes/header.html"></div>
+  <div w3-include-html="/includes/header.html"></div>
   <script>
   w3IncludeHTML();
   </script>
@@ -35,7 +63,7 @@
           <p>
             <center>
               <h2>Project Links</h2>
-              <a href="http://www.dersche.id/baldwin635/bom.html">Bill of Materials</a>
+              <a href="/baldwin635/bom.html">Bill of Materials</a>
             </center>
           </p>
           <br>
@@ -176,7 +204,7 @@
       </div>
     </div>
   </section>
-  <div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
+  <div w3-include-html="/includes/footer.html"></div>
   <script>
   w3IncludeHTML();
   </script>
