--- a/typewriters/1927Bing2.html
+++ b/typewriters/1927Bing2.html
@@ -1,6 +1,34 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-<script src="http://www.w3schools.com/lib/w3data.js"></script>
+<script>
+function w3IncludeHTML() {
+  var z, i, elmnt, file, xhttp;
+  /*loop through a collection of all HTML elements:*/
+  z = document.getElementsByTagName("*");
+  for (i = 0; i < z.length; i++) {
+    elmnt = z[i];
+    /*search for elements with a certain atrribute:*/
+    file = elmnt.getAttribute("w3-include-html");
+    if (file) {
+      /*make an HTTP request using the attribute value as the file name:*/
+      xhttp = new XMLHttpRequest();
+      xhttp.onreadystatechange = function() {
+        if (this.readyState == 4) {
+          if (this.status == 200) {elmnt.innerHTML = this.responseText;}
+          if (this.status == 404) {elmnt.innerHTML = "Page not found.";}
+          /*remove the attribute, and call this function once more:*/
+          elmnt.removeAttribute("w3-include-html");
+          w3IncludeHTML();
+        }
+      }
+      xhttp.open("GET", file, true);
+      xhttp.send();
+      /*exit the function:*/
+      return;
+    }
+  }
+};
+</script>
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -11,14 +39,14 @@
   <![endif]-->
   <title>1927 Bing 2 - DERSCHE.id</title>
   <!-- BOOTSTRAP CORE STYLE CSS -->
-  <link href="http://www.dersche.id/assets/css/bootstrap.css" rel="stylesheet" />
+  <link href="/assets/css/bootstrap.css" rel="stylesheet" />
   <!-- FONTAWESOME STYLE CSS -->
-  <link href="http://www.dersche.id/assets/css/font-awesome.css" rel="stylesheet" />
+  <link href="/assets/css/font-awesome.css" rel="stylesheet" />
   <!-- CUSTOM STYLE CSS -->
-  <link href="http://www.dersche.id/assets/css/style.css" rel="stylesheet" />
+  <link href="/assets/css/style.css" rel="stylesheet" />
 </head>
 <body>
-  <div w3-include-html="http://www.dersche.id/includes/typewriterHeader.html"></div>
+  <div w3-include-html="/includes/typewriterHeader.html"></div>
   <script>
   w3IncludeHTML();
   </script>
@@ -32,7 +60,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12" style="min-height:800px;">
-          <p><center><img src="http://www.dersche.id/assets/img/typewriters/1927Bing2/front.jpg" alt="1927 Bing 2 Front" style="width:500px;"></center></p>
+          <p><center><img src="/assets/img/typewriters/1927Bing2/front.jpg" alt="1927 Bing 2 Front" style="width:500px;"></center></p>
           <hr>
           <p><strong>Year:</strong> 1927</p>
           <p><strong>Make:</strong> Bing</p>
@@ -46,17 +74,17 @@
           </p>
           <center>
             <p><img src="https://lh3.googleusercontent.com/cajhRicCWbehoz-ZWHER-cUERUNESPS69T83VIe3ZIperF4emioyiWPVBmBHGhLppp3OfLJjRAUBpJiBjptiVG8BOyL55l-X1Ch7ogdDDpa20SSbRyk1lJjXqWEXwl1jDc8rQVZ0Mw=w2400" alt="1927 Bing 2 Left Angle" style="width:500px;"></p>
-            <p><img src="http://www.dersche.id/assets/img/typewriters/1927Bing2/rtilt.jpg" alt="1927 Bing 2 Right Angle" style="width:500px;"></p>
-            <p><img src="http://www.dersche.id/assets/img/typewriters/1927Bing2/right.jpg" alt="1927 Bing 2 Right" style="width:500px;"></p>
-            <p><img src="http://www.dersche.id/assets/img/typewriters/1927Bing2/left.jpg" alt="1927 Bing 2 Left" style="width:500px;"></p>
-            <p><img src="http://www.dersche.id/assets/img/typewriters/1927Bing2/back.jpg" alt="1927 Bing 2 Back" style="width:500px;"></p>
-            <p><img src="http://www.dersche.id/assets/img/typewriters/1927Bing2/case.jpg" alt="1927 Bing 2 Case" style="width:500px;"></p>
+            <p><img src="/assets/img/typewriters/1927Bing2/rtilt.jpg" alt="1927 Bing 2 Right Angle" style="width:500px;"></p>
+            <p><img src="/assets/img/typewriters/1927Bing2/right.jpg" alt="1927 Bing 2 Right" style="width:500px;"></p>
+            <p><img src="/assets/img/typewriters/1927Bing2/left.jpg" alt="1927 Bing 2 Left" style="width:500px;"></p>
+            <p><img src="/assets/img/typewriters/1927Bing2/back.jpg" alt="1927 Bing 2 Back" style="width:500px;"></p>
+            <p><img src="/assets/img/typewriters/1927Bing2/case.jpg" alt="1927 Bing 2 Case" style="width:500px;"></p>
           </center>
         </div>
       </div>
     </div>
   </section>
-  <div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
+  <div w3-include-html="/includes/footer.html"></div>
   <script>
   w3IncludeHTML();
   </script>
