update Baldwin BoM

--- a/baldwin635/bom.html
+++ b/baldwin635/bom.html
@@ -20,7 +20,7 @@ function w3IncludeHTML() {
           elmnt.removeAttribute("w3-include-html");
           w3IncludeHTML();
         }
-      }      
+      }
       xhttp.open("GET", file, true);
       xhttp.send();
       /*exit the function:*/
@@ -39,11 +39,11 @@ function w3IncludeHTML() {
   <![endif]-->
   <title>Baldwin 635 BOM - DERSCHE.id</title>
   <!-- BOOTSTRAP CORE STYLE CSS -->
-  <link href="assets/css/bootstrap.css" rel="stylesheet" />
+  <link href="/assets/css/bootstrap.css" rel="stylesheet" />
   <!-- FONTAWESOME STYLE CSS -->
-  <link href="assets/css/font-awesome.css" rel="stylesheet" />
+  <link href="/assets/css/font-awesome.css" rel="stylesheet" />
   <!-- CUSTOM STYLE CSS -->
-  <link href="assets/css/style.css" rel="stylesheet" />
+  <link href="/assets/css/style.css" rel="stylesheet" />
 </head>
 <body>
   <div w3-include-html="/includes/header.html"></div>
